/*
 * $Id: ChangeLog,v 1.92 2006-02-10 06:37:48 guerra000 Exp $
 */
/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2006-02-10 00:31 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  * source/c_controlmisc.c
  * source/c_grid.c
  * source/c_listbox.c
  * source/c_tab.c
  * source/c_winapimisc.c
  * source/c_windows.c
  * source/h_controlmisc.prg
  * source/h_windows.prg
    * Changed some direct HB_ITEM structure to corresponding API functions.

2006-02-09 22:17 UTC-0500 Ciro Vargas C. <pcman2010@yahoo.com>
  * source/miniprint.prg
     * optimize getprinter()  function, (sort and point to default printer )

2006-02-07 11:22 UTC-0500 Ciro Vargas C. <pcman2010@yahoo.com>
  * source/h_windows.prg
  * source/h_controlmisc.prg
     * now inputbox and inputwindow take backcolor from active window.

2006-02-06 11:20 UTC-0500 Ciro Vargas C. <pcman2010@yahoo.com>
  * source/h_edit_ex.prg
     * full control of editing , searching or printing to avoid Double definition window error.

2006-02-05 18:19 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  * source/h_browse.prg
    * Commented the ::AdjustRightScroll() call in NM_CUSTOMDRAW event.
  - samples/oohg/pirntest.prg
    * Removed unnecesary file.

2006-02-03 22:53 UTC-0500 Ciro Vargas C. <pcman2010@yahoo.com>
  * source/h_print.prg
     * added new parameter for direct printing in selprinter()

2006-02-03 14:41 UTC-0500 Ciro Vargas C. <pcman2010@yahoo.com>
  * source/h_print.prg
     * added hide printing window at selprinter()
     * fixed hello sample problem, because bad program pirntest.prg instead of printtest.prg

2006-02-02 23:11 UTC-0500 Ciro Vargas C. <pcman2010@yahoo.com>
  * source/makelib.bat
     * added -w to makelib.bat for harbour

2006-02-02 21:15 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  * source/h_print.prg
    * Fixed unused variables warning.
