@@ -1,11 +1,17 @@
 /*
- * $Id: ChangeLog,v 1.92 2006-02-10 06:37:48 guerra000 Exp $
+ * $Id: ChangeLog,v 1.93 2006-02-10 15:19:20 guerra000 Exp $
  */
 /* Use this format for the entry headers:
    YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2006-02-10 09:17 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
+  * source/c_controlmisc.c
+  * source/c_windows.c
+  * source/h_windows.prg
+    * Removed some direct PHB_DYNS->pSymbol usage.
 
 2006-02-10 00:31 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
   * source/c_controlmisc.c
